fix the comment children spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13679,7 +13679,7 @@ label {
 
 @media only screen and (max-width: 575px) {
   .comments-post .comments-area .comment .comment-body .comment-text {
-    padding: 0 40px 0 0;
+    padding: 0 23px 0 0;
   }
 }
 
